<resources>
    <string name="app_name">carMapDemo</string>

    <string name="title_activity_maps">List and Map Demo</string>
    <string name="google_maps_key">AIzaSyCqIbPWxYMa4ZMIwsmy2Kp9nfXBEelwYSg</string>


    <string name="nav_list_title">Show List</string>
    <string name="nav_map_title">Show Map</string>

    <string name="lvHeaderName">Name</string>
    <string name="lvHeaderCoords">Coords</string>
    <string name="lvHeaderEngineType">Engine</string>
    <string name="lvHeaderVin">VIN</string>
    <string name="lvHeaderExterior">Exterior</string>
    <string name="lvHeaderInterior">Interior</string>
    <string name="lvHeaderFuel">Fuel</string>
    <string name="lvHeaderAdress">Address</string>

</resources>
